--- a/ManageSYS/css/style.css
+++ b/ManageSYS/css/style.css
@@ -1,10 +1,5 @@
 ﻿@charset "utf-8";
-/* CSS Document */
-/***
- * uimaker
- * http://www.uimaker.com
- * e-mail: admin@uimaker.com
- */
+
 *{font-size:9pt;border:0;margin:0;padding:0;}
 body{font-family:'微软雅黑'; margin:0 auto;min-width:980px;}
 ul{display:block;margin:0;padding:0;list-style:none;}
@@ -430,5 +425,10 @@ h2{font-weight:normal;}
 .hintfont{ color:Gray;}
 .showfont{color:Black; }
 
+
+.configmainleft{width:250px;position:absolute; top:8px; left:8px;float:left;}
+.configmainright{margin-left:268px !important;
+   margin-left:26%; 
+ /*  height:auto !important; */ }
 
 
