--- a/ManageSYS/css/style.css
+++ b/ManageSYS/css/style.css
@@ -12,79 +12,8 @@ table{border-collapse:collapse;border-spacing: 0;}
 cite{font-style:normal;}
 h2{font-weight:normal;}
 
-/*cloud*/
-
-#mainBody {width:100%;height:100%;position:absolute;z-index:-1;}
-.cloud {position:absolute;top:0px;left:0px;width:100%;height:100%;background:url(../images/cloud.png) no-repeat;z-index:1;opacity:0.5;}
-#cloud2 {z-index:2;}
 
 
-/*login*/
-.logintop{height:47px; position:absolute; top:0; background:url(../images/loginbg1.png) repeat-x;z-index:100; width:100%;}
-.logintop span{color:#fff; line-height:47px; background:url(../images/loginsj.png) no-repeat 21px 18px; text-indent:44px; color:#afc5d2; float:left;}
-.logintop ul{float:right; padding-right:30px;}
-.logintop ul li{float:left; margin-left:20px; line-height:47px;}
-.logintop ul li a{color:#afc5d2;}
-.logintop ul li a:hover{color:#fff;}
-.loginbody{background:url(../images/loginbg3.png) no-repeat center center; width:100%; height:585px; overflow:hidden; position:absolute; top:47px;}
-.systemlogo{background:url(../images/loginlogo.png) no-repeat center;width:100%; height:71px; margin-top:75px;}
-.loginbox{width:692px; height:336px; background:url(../images/logininfo.png) no-repeat; margin-top:30px;}
-.loginbox ul{margin-top:88px; margin-left:285px;}
-.loginbox ul li{margin-bottom:25px;}
-.loginbox ul li label{color:#687f92; padding-left:25px;}
-.loginbox ul li label a{color:#687f92;}
-.loginbox ul li label a:hover{color:#3d96c9;}
-.loginbox ul li label input{margin-right:5px;}
-.loginuser{width:299px; height:48px; background:url(../images/loginuser.png) no-repeat; border:none; line-height:48px; padding-left:44px; font-size:14px; font-weight:bold;}
-.loginpwd{width:299px; height:48px; background:url(../images/loginpassword.png) no-repeat; border:none;line-height:48px; padding-left:44px; font-size:14px; color:#90a2bc;}
-.loginbtn{width:111px;height:35px; background:url(../images/buttonbg.png) repeat-x; font-size:14px; font-weight:bold; color:#fff;cursor:pointer; line-height:35px;}
-.loginbm{height:50px; line-height:50px; text-align:center; background:url(../images/loginbg2.png) repeat-x;position:absolute; bottom:0; width:100%; color:#0b3a58;}
-.loginbm a{font-weight:bold;color:#0b3a58;}
-.loginbm a:hover{color:#fff;}
-
-
-/*top.html*/
-.header{height:88px;}
-.topleft{height:88px;background:url(../images/topleft.jpg) no-repeat;float:left; width:300px;}
-.topleft img{margin-top:12px;margin-left:10px;}
-.topright{height:88px;background:url(../images/topright.jpg) no-repeat right;float:right;}
-.nav{float:left;}
-.nav li{float:left;width:87px;height:88px; text-align:center;}
-.nav li a{display:block;width:87px;height:88px;-moz-transition: none; transition: background-color 0.3s linear; -moz-transition: background-color 0.3s linear; -webkit-transition: background-color 0.3s linear; -o-transition: background-color 0.3s linear; }
-.nav li a.selected{background:url(../images/navbg.png) no-repeat;}
-.nav li a:hover{display:block;background:#000;color:#fff;background: none repeat scroll 0% 0% rgb(43, 127, 181);}
-.nav li img{margin-top:10px;}
-.nav li a{display:block;}
-.nav a h2{font-size:14px;color:#d6e8f1;}
-.nav a:hover h2{color:#fff;}
-.topright ul{padding-top:15px; float:right; padding-right:12px;}
-.topright ul li{float:left; padding-left:9px; padding-right:9px; background:url(../images/line.gif) no-repeat right;}
-.topright ul li:last-child{background:none;}
-.topright ul li a{font-size:13px; color:#e9f2f7;}
-.topright ul li a:hover{color:#fff;}
-.topright ul li span{margin-top:2px;float:left;padding-right:3px;}
-.user{height:30px;background:url(../images/ub1.png) repeat-x;clear:both;margin-top:10px;float:right; margin-right:12px;border-radius:30px; behavior:url(js/pie.htc); white-space:nowrap;position:relative;}
-.user span{display:inline-block;padding-right:10px; background:url(../images/user.png) no-repeat 15px 10px; line-height:30px; font-size:14px;color:#b8ceda; padding-left:20px; padding-left:35px;}
-.user b{display:inline-block;width:20px;height:18px; background:url(../images/msg.png);text-align:center; font-weight:normal; color:#fff;font-size:14px;margin-right:13px; margin-top:7px; line-height:18px;}
-.user i{display:inline-block;margin-right:5px;font-style:normal;line-height:30px; font-size:14px;color:#b8ceda;}
-
-/*left.html*/
-.lefttop{background:url(../images/lefttop.gif) repeat-x;height:30px;color:#fff;font-size:14px;line-height:40px;}
-.lefttop span{margin-left:8px; margin-top:10px;margin-right:8px; background:url(../images/leftico.png) no-repeat; width:20px; height:21px;float:left;}
-.leftmenu{width:149px;padding-bottom: 9999px;margin-bottom: -9999px; overflow:hidden; background:url(../images/leftline.gif) repeat-y right;}
-.leftmenu dd{background:url(../images/leftmenubg.gif) repeat-x;line-height:35px;font-weight:bold;font-size:14px;border-right:solid 1px #b7d5df;}
-.leftmenu dd span{float:left;margin:10px 8px 0 12px;}
-.leftmenu dd .menuson{display:none;}
-.leftmenu dd:first-child .menuson{display:block;}
-.menuson {line-height:25px; font-weight:normal; }
-.menuson li{cursor:pointer;}
-.menuson li.active{position:relative; background:url(../images/libg.png) repeat-x; line-height:30px; color:#fff;}
-.menuson li cite{display:block; float:left; margin-left:32px; background:url(../images/list.gif) no-repeat; width:16px; height:16px; margin-top:7px;}
-.menuson li.active cite{background:url(../images/list1.gif) no-repeat;}
-.menuson li.active i{display:block; background:url(../images/sj.png) no-repeat; width:6px; height:11px; position:absolute; right:0;z-index:10000; top:9px; right:-1px;}
-.menuson li a{ display:block; *display:inline; *padding-top:5px;}
-.menuson li.active a{color:#fff;}
-.title{cursor:pointer;}
 
 
 /*right.html*/
@@ -108,45 +37,6 @@ h2{font-weight:normal;}
 .tablelist tbody tr:hover{background:#e5ebee;}
 .sort{padding-left:3px;}
 
-/*page*/
-.pagin{position:relative;margin-top:10px;padding:0 12px;}
-.pagin .blue{color:#056dae;font-style:normal;}
-.pagin .paginList{position:absolute;right:12px;top:0;}
-.pagin .paginList .paginItem{float:left;}
-.pagin .paginList .paginItem a{float:left;width:31px;height:28px;border:1px solid #DDD; text-align:center;line-height:30px;border-left:none;color:#3399d5;}
-.pagin .paginList .paginItem:first-child a{border-left:1px solid #DDD;}
-.pagin .paginList .paginItem:first-child a{border-bottom-left-radius:5px;border-top-left-radius:5px;}
-.pagin .paginList .paginItem:last-child a{border-bottom-right-radius:5px;border-top-right-radius:5px;}
-.pagin .paginList .paginItem.current,.pagin .paginList .paginItem.current a{background:#f5f5f5; cursor:default;color:#737373;}
-.pagin .paginList .paginItem:hover{background:#f5f5f5;}
-.pagin .paginList .paginItem.more,.pagin .paginList .paginItem.more a:hover{ cursor:default;}
-.pagin .paginList .paginItem.more:hover{background:#FFF;}
-.pagin .paginList .paginItem.more a{color:#737373;}
-.pagepre{background:url(../images/pre.gif) no-repeat center center; width:31px; height:28px;}
-.pagenxt{background:url(../images/next.gif) no-repeat center center; width:31px; height:28px;}
-
-/*index*/
-.mainindex{padding:20px; overflow:hidden;}
-.welinfo{height:32px; line-height:32px; padding-bottom:8px;}
-.welinfo span{float:left;}
-.welinfo b{padding-left:8px;}
-.welinfo a{padding-left:15px;color:#3186c8;}
-.welinfo a:hover{color:#F60;}
-.welinfo i{font-style:normal; padding-left:8px;}
-.xline{border-bottom:solid 1px #dfe9ee; height:5px;}
-.iconlist{padding-left:40px; overflow:hidden;}
-.iconlist li{text-align:center; float:left; margin-right:25px; margin-top:25px;}
-.iconlist li p{line-height:25px;}
-.ibox{clear:both; padding-left:40px; padding-top:18px; overflow:hidden; padding-bottom:18px;}
-.ibtn{background:url(../images/ibtnbg.png) repeat-x;border:solid 1px #bfcfe1; height:23px; line-height:23px; display:block; float:left; padding:0 15px; cursor:pointer;}
-.ibtn img{margin-top:5px; float:left; padding-right:7px;}
-.box{height:15px;}
-.infolist{padding-left:40px; padding-bottom:15px;}
-.infolist li{ line-height:23px; height:23px; margin-bottom:8px;}
-.infolist li span{float:left; display:block; margin-right:10px;}
-.uimakerinfo{padding-left:40px; background:url(../images/search.png) no-repeat 10px 15px; padding-top:15px; padding-bottom:20px;}
-.umlist{padding-left:40px;}
-.umlist li{float:left; background:url(../images/ulist.png) no-repeat 0 5px; padding-left:10px; margin-right:15px;}
 
 
 /*default*/
@@ -225,14 +115,7 @@ h2{font-weight:normal;}
 .tipbtn{margin-top:25px; margin-left:125px;}
 .sure ,.cancel{width:96px; height:35px; line-height:35px; color:#fff; background:url(../images/btnbg1.png) repeat-x; font-size:14px; font-weight:bold;border-radius: 3px; cursor:pointer;}
 .cancel{background:url(../images/btnbg2.png) repeat-x;color:#000;font-weight:normal;}
-/*tools*/
-.toolsli{clear:both; overflow:hidden; margin-bottom:20px;}
-.toollist{margin-left:20px; overflow:hidden; float:left;}
-.toollist li{width:66px; text-align:center; float:left; margin-right:32px;}
-.toollist li a{width:65px; height:65px; background:#fafbfb; border-right:solid 1px #dbdbdb;border-bottom:solid 1px #dbdbdb; display:block;}
-.toollist li a:hover{background:#eef4f7;border-right:solid 1px #d0d5d7;border-bottom:solid 1px #d0d5d7;}
-.toollist li h2{line-height:35px;}
-.tooladd{margin-top:25px; width:20px; height:20px; float:left; display:block;}
+
 
 /*error 404*/
 .error{background:url(../images/404.png) no-repeat; width:490px; margin-top:75px;padding-top:65px;}
@@ -241,51 +124,7 @@ h2{font-weight:normal;}
 .reindex{padding-left:154px;}
 .reindex a{width:115px; height:35px; font-size:14px; font-weight:bold; color:#fff; background:#3c95c8; display:block; line-height:35px; text-align:center;border-radius: 3px; behavior:url(js/pie.htc);margin-top:20px;}
 
-/*computer*/
-.comtitle{padding:20px; clear:both;}
-.comtitle span{width:10px;height:10px; background:url(../images/clist.png) no-repeat; float:left; background:#fff; padding-top:3px;}
-.comtitle h2{font-size:14px; display:block; float:left;color:#2a3e93; background:#fff; padding-left:5px; padding-right:8px;}
-.rline{border-bottom:solid 1px #e5ecf0; height:10px; margin-left:50px;}
-.disklist{padding-left:20px; padding-right:20px;}
-.disklist li{width:275px;_width:270px;float:left; margin-right:10px;px;height:70px; cursor:pointer; margin-bottom:5px;border:solid 1px #fff;}
-.disklist li a{color:#000;}
-.disklist li:hover{background:#fcfcfc; border:solid 1px #e5ecf0;}
-.dleft{background:url(../images/c02.png) no-repeat; height:50px; margin-left:12px; float:left; width:50px; margin-top:15px;}
-.dleft1{background:url(../images/c01.png) no-repeat; height:50px; margin-left:12px; float:left; width:50px; margin-top:15px;}
-.dleft2{background:url(../images/c03.png) no-repeat; height:50px; margin-left:12px; float:left; width:50px; margin-top:15px;}
-.dright{float:left; margin-left:10px; margin-top:5px;}
-.dright h3{font-weight:normal; padding-top:15px;}
-.dright p{color:#949494;}
-.dinfo{width:189px;height:15px; background:url(../images/diskbg.png) no-repeat; margin-top:5px; margin-bottom:5px;}
-.dinfo span{background:url(../images/cbg.png) repeat-x; height:15px;}
-.filetable{width:100%;}
-.filetable thead tr{background:#f5f9fb; line-height:35px;}
-.filetable thead tr th{text-align:left; text-indent:15px;font-weight:normal;color:#597190;}
-.filetable tbody tr td{text-indent:15px; line-height:23px;}
-.filetable tbody tr td img {margin-right:5px;}
-.tdlast{text-align:right;}
-.filetable tbody tr:hover{background:#f5f8fa; cursor:pointer;}
 
-/*imglist*/
-.imglist{clear:both; overflow:hidden; margin-bottom:20px; margin-left:5px;}
-.imglist li{width:188px; border:solid 1px #fff;height:199px;float:left; margin-right:8px; margin-bottom:10px; cursor:pointer;}
-.imglist li:hover{border:solid 1px #d7e4ea;}
-.imglist li span{width:168px; height:126px; margin:8px;}
-.imglist li h2{text-align:center; line-height:25px;}
-.imglist li p{text-align:center; line-height:17px; background:url(../images/line1.png) center center no-repeat;}
-.imglist li p a{color:#1f7cb6;}
-.imglist li p a:hover{color:#F60;}
-
-/*imgtable*/
-.imgtable{width:100%;border:solid 1px #cbcbcb; }
-.imgtable th{background:url(../images/th.gif) repeat-x; height:34px; line-height:34px; border-bottom:solid 1px #b6cad2; text-indent:21px; text-align:left;}
-.imgtable td{line-height:20px; text-indent:21px; border-right: dotted 1px #c7c7c7;}
-.imgtable td img{margin:10px 20px 10px 0;}
-.imgtable td p{color:#919191;}
-.imgtable td i{font-style:normal; color:#ea2020;}
-.imgtd{text-indent:0;}
-.imgtable tbody tr.odd{background:#f5f8fa;}
-.imgtable tbody tr:hover{background:#e5ebee;}
 
 /*tab*/
 .itab{height:36px; border-bottom:solid 1px #d0dee5; position:relative; border-left:solid 1px #d3dbde;}
@@ -297,55 +136,14 @@ h2{font-weight:normal;}
 .formtext b{color:#d70101;}
 .forminfo b{color:#ea2020; padding-left:3px;}
 
-/*class*/
-.classlist li{float:left;margin-right:10px;margin-bottom:10px;padding:12px;border:1px solid #ebebeb; background:#fcfcfc;}
-.classlist li:hover{border:1px solid #3eafe0; cursor:pointer;}
-.classlist li span{float:left;margin-right:18px;border:3px solid #fff;}
-.classlist li .lright{float:left;width:150px;}
-.classlist li .lright h2{font-size:12px; font-weight:bold;line-height:30px;}
-.classlist li .lright p{line-height:20px;}
-.enter{display:block;margin-top:5px;width:94px;height:30px;color:#fff;background:#3eafe0;font-weight:bold; border-radius:2px; text-align:center;line-height:30px; cursor:pointer;}
-.enter:hover{color:#fff; background:#d98c1d;}
-.clear{clear:both;}
 
-/*seachform*/
-.seachform{ height:42px;}
-.seachform li{float:left; margin-right:15px;}
-.seachform li label{padding-right:10px; float:left; line-height:32px;}
-.scinput{width:150px; height:32px; line-height:32px; border-top:solid 1px #a7b5bc; border-left:solid 1px #a7b5bc; border-right:solid 1px #ced9df; border-bottom:solid 1px #ced9df; background:url(../images/inputbg.gif) repeat-x; text-indent:10px;}
-.scbtn{width:85px;height:35px; background:url(../images/btnbg.png) no-repeat center; font-size:14px;font-weight:bold;color:#fff; cursor:pointer;border-radius:3px; behavior:url(js/pie.htc);}
 
-/*gridview*/
-.datable {background-color: #9FD6FF; color:#333333; font-size:12px;}
-.datable tr {height:25px;}
-.datable .lup {background-color: #C8E1FB;font-size: 12px;color: #014F8A;}
-.datable .lup th {border-top: 1px solid #FFFFFF; border-left: 1px solid #FFFFFF;font-weight: normal;}
-.datable .lupbai {background-color: #FFFFFF;}
-.datable .trnei {background-color: #F2F9FF;}
-.datable td {border-top: 1px solid #FFFFFF; border-left: 1px solid #FFFFFF;}
              
 /*btn*/
-.btnred
-{
-    width: 50px;
-    height: 20px;
-    background: no-repeat;
-    font-size: 12px;
-    font-weight: bold;
-    color: #FFFFFF;
-    cursor: pointer;
-    background-color: #993333;
-}
-.btngrey
-{
-    width: 50px;
-    height: 20px;
-    background: no-repeat;
-    font-size: 12px;
-    font-weight: bold;
-    color: #FFFFFF;   
-    background-color: #F4F4F4;
-}
+.btnred{ width: 50px; height: 20px;background: no-repeat;font-size: 12px; font-weight: bold;
+    color: #FFFFFF; cursor: pointer; background-color: #993333;}
+.btngrey{width: 50px; height: 20px;background: no-repeat;font-size: 12px;font-weight: bold;
+    color: #FFFFFF;  background-color: #F4F4F4;}
 .btn1{width:50px;height:20px; background:url(../images/btnbg.png) no-repeat; font-size:12px;font-weight:bold;color:#fff; cursor:pointer;}
 .btnSelect{width:140px;height:35px; background:#fcfdfd; font-size:14px;font-weight:bold;color:#000; cursor:pointer;}
 .btnUnsel{width:140px;height:35px; background:url(../images/btnbg.png) no-repeat; font-size:14px;font-weight:bold;color:#fff; cursor:pointer;}
@@ -357,20 +155,18 @@ h2{font-weight:normal;}
 .btnhide{ display: none;}
 .btnpatch{border:solid 1px #a7b5bc;width:80px;height:35px; background:url(../images/leftico03.png) no-repeat; font-size:14px;font-weight:bold;color:#000; cursor:pointer;}
 /* 状态框 */
-.labstatu
-{
-    height: 20px;
-    background: #993333;
-    font-size: 12px;
-    font-weight: bold;
-    color: #fff;
-    border-radius: 10px;   
-    line-height: 20px;
-}
+.labstatu{height: 20px; background: #993333;  font-size: 12px; font-weight: bold;color: #fff;
+    border-radius: 10px;    line-height: 20px;}
 
-
-/*grid*/
-
+/*gridview1*/
+.datable {background-color: #9FD6FF; color:#333333; font-size:12px;}
+.datable tr {height:25px;}
+.datable .lup {background-color: #C8E1FB;font-size: 12px;color: #014F8A;}
+.datable .lup th {border-top: 1px solid #FFFFFF; border-left: 1px solid #FFFFFF;font-weight: normal;}
+.datable .lupbai {background-color: #FFFFFF;}
+.datable .trnei {background-color: #F2F9FF;}
+.datable td {border-top: 1px solid #FFFFFF; border-left: 1px solid #FFFFFF;}
+/*gridview2*/
 .grid{border:solid 1px #cbcbcb; width:100%; clear:both;}
 .gridheader{background:url(../images/th.gif) repeat-x; height:34px; line-height:34px; border-bottom:solid 1px #b6cad2; text-indent:11px; text-align:left;}
 .gridrow{line-height:25px; text-indent:11px; border-right: dotted 1px #c7c7c7;background-color: #FFFFFF;}
@@ -455,4 +251,9 @@ h2{font-weight:normal;}
    margin-left:26%; 
  /*  height:auto !important; */ }
 
+
+/*picdataTable*/
+.staticHead {color: #000000; font-size: 12; }
+.staticHeadtext {color: #000000; font-size: 12px; }
+.staticRow {	color: #344b50;	font-size: 12px;}
 
